# IA

./: .gitignore  ANNdigitsClassifierModel.yml  CMakeLists.txt  FONT_FEATURES.csv  FULL_FEATURES.csv  Muestra_de_fuentes_loremfull.py  RNA.cpp  RNA_2.1.cpp  RNA_2.2.cpp  RNA_2.3.cpp  RNA_2.cpp  Routes.py  Rutas.txt  main.cpp  yeni.cpp
enc_temp_folder/b655695bcfe1ec857616a5fda123ce/: RNA.cpp
